apps/infra/vaultwarden/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - env:
        - name: ADMIN_TOKEN
          valueFrom:
            secretKeyRef:
              key: ADMIN_TOKEN
              name: vaultwarden-secret
        image: docker.io/vaultwarden/server
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /alive
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: vaultwarden
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /alive
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
          - name: vaultwarden-data
            mountPath: /data
      restartPolicy: Always
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
